@@ -354,3 +354,4 @@ Revision	Version Updated		Log Message
 339		C++			Added Korea1821_01_02_ConverterMod0.5 save.
 340		C++			Tab before "last_election" in output
 341		C++			Social reforms no longer in a temp function (no functional change).
+342		C++			Balance Upper House (and move out of a temp function).
